# arxii

./: .ansible-lint  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .plan.md  .pre-commit-config.yaml  .sonarcloud.properties  AGENTS.md  AGENT_GLOSSARY_MAP.md  CLAUDE.md  CODE_REVIEW_RESTRICTION_MODEL.md  LICENSE  README.md  django_notes.md  flake8.cfg  justfile  mise.toml  pyproject.toml  qodana.yaml  requirements.dev.txt  requirements.txt  sonar-project.properties
.claude/scripts/: arx-test-scratch.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  fix-volume-perms.sh  init-firewall.sh  polytoken.md  post-create.sh  sync-env.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  nightly-migration-replay.yml  project-sync.yml  qodana_code_quality.yml  rehearse.yml  sonarcloud-issues.yml  sonarcloud.yml  standup.yml  validate.yml
.polytoken/subagents/: code-reviewer.md  plan-reviewer.md
docs/: commands_overview.md  dev-commands.md  devcontainer-setup.md  evennia-quirks.md  flows_examples.md  mypy-strategy.md  project-board-automation.md  scenes-technical.md  spec-template.md  trust-based-permissions.md  ty-strategy.md
docs/adr/: 0001-action-centric-dispatch-through-the-player-action-seam.md  0002-one-round-framework-three-modes.md  0003-combat-action-economy-one-focused-two-secondary.md  0004-tempo-is-action-driven-never-wall-clock.md  0005-reactive-behavior-is-a-separate-flows-engine.md  0006-scenes-are-provisional-never-auto-persist-rp.md  0007-no-json-fields-typed-queryable-columns.md  0008-all-concrete-models-use-sharedmemorymodel.md  0009-no-django-signals-explicit-service-functions.md  0010-fk-direction-specific-to-general.md  0011-ic-state-keys-on-charactersheet-not-account.md  0012-postgresql-only-in-production.md  0013-schema-only-migrations-pre-production.md  0014-no-persisted-derived-data-derive-on-read.md  0015-no-polymorphic-genericfk-models.md  0016-one-shared-base-per-concept.md  0017-new-subsystems-are-submodules.md  0018-range-partition-the-interaction-table.md  0019-unified-resolution-one-roll-path.md  0020-feature-specs-live-in-the-issue-body.md  0021-main-uses-a-merge-queue.md  0022-staff-tooling-is-admin-hosted.md  0023-pvp-is-structurally-non-lethal.md  0024-consent-gates-behavior-altering-effects.md  0025-never-parse-pose-text-for-mechanics.md  0026-the-watched-player-is-always-ooc-aware.md  0027-visibility-equals-eligibility.md  0028-web-first-not-wired-into-react-is-not-implemented.md  0029-named-public-faces-are-always-shown-by-name.md  0030-gms-author-story-trees-outcomes-resolve-by-roll.md  0031-exact-numbers-in-the-ledger-labels-in-the-fiction.md  0032-constrained-bystander-reactions.md  0033-privacy-is-mvp-gating.md  0034-mechanics-individualize-characters.md  0035-default-to-the-high-drama-ceremony-path.md  0036-combat-merits-legend-never-xp.md  0037-encounter-difficulty-scales-on-party-size-and-level.md  0038-asymmetrical-pve-npcs-have-no-sheets.md  0039-bulk-resolution-uses-honest-terminal-states.md  0040-incapacitation-and-dying-decoupled-from-vitals.md  (+179 more)
docs/architecture/: action-template-pipeline.md  anima-ritual-ui.md  capability-challenge-content.md  check-resolution-spectrum.md  clash-design.md  clash-implementation-phases.md  combat-conditions.md  combat-consequences-pool-reconciliation-design.md  combat-magic-integration.md  combat-outcome-broadcast.md  combat-resolution-loop.md  corruption.md  covenants-slice-a.md  covenants-slice-b-design.md  covenants-slice-d-design.md  damage-scaling.md  incapacitation-capability-gating.md  items-fashion-mantles.md  magical-alteration-plan.md  mechanics-api.md  migration-nuke-and-rebuild-plan.md  missions-create-ui.md  non-clash-casting.md  power-derivation.md  property-capability-action.md  reactive-layer-dispatch.md  reactive-layer-foundation.md  relationship-thread-anchor.md  resonance-environment-interaction.md  resonance-environment-universal-path.md  resonance-gain.md  resonance-threads.md  ritual-ui-pattern.md  scene-magic-enhancement.md  skill-friction-audit-and-takeaways-design.md  soul-tether.md  soulfray-recovery.md  technique-use-pipeline.md  thread-ui.md  unified-combat-ui-design.md  (+1 more)
docs/audits/: 2026-04-26-seed-and-integration-coverage-audit.md  2026-04-27-gmtable-phase5-audit.md  2026-06-21-telnet-driveability-ui-parity.md  2026-06-25-player-reachability-coverage.md  2026-07-10-webclient-rp-ux-audit.md
docs/frontend/: architecture.md  character_sheets_plan.md  command_descriptor.md  game_client_plan.md  homepage_plan.md  message_types.md  migration_plan.md  performance.md  testing.md
docs/integrations/: cloudinary.md  email.md  social-auth.md
docs/old_arx_migrations/: README.md  advancement.md  character-data-storage.md  check-resolution.md  (+8 more)
frontend/: .env.example  AGENTS.md  CLAUDE.md  README.md  e2e.backend.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tailwind.config.js  test-output.txt  tmpclaude-bd81-cwd  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
infra/: README.md
scripts/: backup_to_gdrive.py  bootstrap-devcontainer-host.ps1  reset_migrations.py
shell_scripts/: install.ps1  install.sh
src/: .env.example  schema.json  settings.py  sqlite_test_settings.py  test_settings.py
tmp/: spec-2478.md
tools/: backfill_project_board.sh  build_content_fixtures.py  build_schema.py  check_migration_seed_data.py  check_migrations.py  check_missing_migrations.py  check_mock_cast.py  check_partition_sql_drift.py  check_type_annotations.py  ensure_content_repo.sh  export_content.py  introspect_models.py  lint_cached_property_import.py  lint_getattr_literal.py  lint_noqa_ratchet.py  lint_objectdb_param.py  lint_prefetch_string.py  lint_shard_coverage.py  lint_shared_memory.py  lint_string_literal.py  lint_use_filterset.py  load_weather_seed.py  noqa_ratchet_baseline.txt  project_board_sync.py  push_content.py  sonarcloud_constants.py  sonarcloud_sync.py  sonarcloud_triage.py  split_test_labels.py
(+7648 files in other folders)
